<resources>
    <string name="app_name">Bin Checker</string>
    <string name="input_bin">INPUT YOUR BIN NUMBER</string>
    <string name="hint_bin">6 or 8 digits</string>
    <string name="button_check">CHECK</string>
    <string name="button_back">BACK TO MAIN</string>
    <string name="question">\?</string>
    <string name="scheme">SCHEME/NETWORK</string>
    <string name="brand">BRAND</string>
    <string name="bin_number">BIN NUMBER</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH   </string>
    <string name="luhn">LUHN   </string>
    <string name="type">TYPE</string>
    <string name="credit_debit">CREDIT/DEBIT</string>
    <string name="yes_no">YES/NO</string>
    <string name="prepaid">PREPAID</string>
    <string name="country">COUNTRY</string>
    <string name="bank">BANK</string>
    <string name="contact">CONTACT</string>
    <string name="coordinates">(latitude: ?, longitude: ?)</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="history_info">Show checked bin</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>