<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:background="?attr/colorSecondaryVariant"
    android:layout_margin="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorSecondaryVariant"
        android:padding="5dp">

        <TextView
            style="@style/cardTitle"
            android:text="@string/bin_number"/>
        <TextView
            style="@style/cardNormal"
            android:id="@+id/bin"
            android:paddingBottom="5dp"
            android:text="@string/question"/>

        <TextView
            style="@style/cardTitle"
            android:text="@string/scheme"/>
        <TextView
            style="@style/cardNormal"
            android:id="@+id/scheme"
            android:paddingBottom="5dp"
            android:text="@string/question"/>
        <TextView
            style="@style/cardTitle"
            android:text="@string/brand"/>
        <TextView
            style="@style/cardNormal"
            android:id="@+id/brand"
            android:paddingBottom="5dp"
            android:text="@string/question"/>

        <TableLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TextView
                style="@style/cardTitle"
                android:text="@string/card_number" />
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/cardNormal"
                        android:layout_width="20dp"
                        android:text="@string/length" />
                    <TextView
                        android:id="@+id/length"
                        style="@style/cardNormal"
                        android:text="@string/question" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp">
                    <TextView
                        style="@style/cardNormal"
                        android:layout_width="20dp"
                        android:text="@string/luhn" />
                    <TextView
                        android:id="@+id/luhn"
                        style="@style/cardNormal"
                        android:text="@string/question" />
                </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/cardTitle"
                    android:text="@string/type" />
                <TextView
                    style="@style/cardTitle"
                    android:text="@string/prepaid"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp">
                <TextView
                    style="@style/cardNormal"
                    android:id="@+id/type"
                    android:text="@string/credit_debit"/>
                <TextView
                    style="@style/cardNormal"
                    android:id="@+id/prepaid"
                    android:text="@string/yes_no"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/countryTable"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:stretchColumns="*">
            <TextView
                style="@style/cardTitle"
                android:text="@string/country"/>

            <TextView
                style="@style/cardNormal"
                android:id="@+id/country"
                android:enabled="true"
                android:text="@string/question"/>
        </TableLayout>
        <TextView
            style="@style/cardSmall"
            android:id="@+id/coordinates"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:paddingBottom="5dp"
            android:enabled="true"
            android:text="@string/coordinates"/>
        <TextView
            style="@style/cardTitle"
            android:text="@string/bank"/>
        <TextView
            style="@style/cardNormal"
            android:id="@+id/bank"
            android:enabled="false"
            android:text="@string/question"/>
        <TextView
            style="@style/cardSmall"
            android:paddingBottom="5dp"
            android:id="@+id/url"
            android:enabled="false"
            android:text="@string/question"/>
        <TextView
            style="@style/cardTitle"
            android:text="@string/contact"/>
        <TableLayout
            android:id="@+id/phoneTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/cardNormal"
                android:id="@+id/phone"
                android:enabled="false"
                android:drawablePadding="5dip"
                android:visibility="visible"
                android:paddingBottom="10dp"
                android:text="@string/question"/>
        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>