<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:text="@string/input_bin"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/hint_bin"
        android:inputType="number"
        android:text=""
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="@color/gray"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textview_first"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/gray"
        android:enabled="false"
        android:text="@string/button_check"
        android:textColor="?attr/colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_bin"
        tools:ignore="TextContrastCheck" />

<!--    <ProgressBar-->
<!--        android:id="@+id/progressBar"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="20dp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/check"-->
<!--        app:layout_constraintTop_toTopOf="@+id/check" />-->


</androidx.constraintlayout.widget.ConstraintLayout>